removed react-snap

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Priscy Recipes offers the finest meals, drinks, ingredients in various category. Enjoy preparing your favourite meals, drinks, recipes with clear instructions along with videos." />
+    <meta name="google-site-verification" content="j9pHtV5h5N6FGa6PbmCIMGTUAlw84yo-mjQ-_nsCjZo" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
