added share component

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
   <meta name="description"
     content="Priscy Recipes offers the finest meals, drinks, ingredients in various category. Enjoy preparing your favourite meals, drinks, recipes with clear instructions along with videos." />
   <meta name="google-site-verification" content="j9pHtV5h5N6FGa6PbmCIMGTUAlw84yo-mjQ-_nsCjZo" />
-
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -20,9 +21,9 @@
   <script defer src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
     integrity="sha384-haqrlim99xjfMxRP6EWtafs0sB1WKcMdynwZleuUSwJR0mDeRYbhtY+KPMr+JL6f"
     crossorigin="anonymous"></script>
-  <script data-ad-client="ca-pub-9235878225917616" async
+  <script data-ad-client="ca-pub-9235878225917616" defer
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script data-ad-client="pub-9235878225917616" async src="https://pagead2.googlesyndication.com/
+  <script data-ad-client="pub-9235878225917616" defer src="https://pagead2.googlesyndication.com/
 pagead/js/adsbygoogle.js"></script>
 
   <title>Priscy | Recipes</title>
